[gd_scene load_steps=4 format=3 uid="uid://d2d8j4n3akmpi"]

[ext_resource type="Script" uid="uid://c57j6ut4cti05" path="res://scenes/pause_menu.gd" id="1_hdmo1"]
[ext_resource type="Script" uid="uid://37m7gjc6fx3" path="res://scenes/scripts/resume.gd" id="2_ugu8e"]
[ext_resource type="Script" uid="uid://dp3tk1cddhmo7" path="res://scenes/scripts/5.gd" id="3_6d08n"]

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hdmo1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -67.0
offset_top = -148.0
offset_bottom = -47.0
grow_horizontal = 2
scale = Vector2(2.953816, 2.331642)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../main_menu")
focus_neighbor_bottom = NodePath("../restart")
text = "resume
"
script = ExtResource("2_ugu8e")

[node name="restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../resume")
focus_neighbor_bottom = NodePath("../quit")
text = "restart
"

[node name="quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../restart")
focus_neighbor_bottom = NodePath("../main_menu")
text = "quit
"

[node name="main_menu" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../quit")
focus_neighbor_bottom = NodePath("../resume")
text = "main menu"
script = ExtResource("3_6d08n")

[connection signal="pressed" from="PanelContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/main_menu" to="." method="_on_main_menu_pressed"]
